send cards to clients

--- a/blackjack-tcp/Makefile
+++ b/blackjack-tcp/Makefile
@@ -26,7 +26,7 @@ endif
 all:  blackjack-tcp-$(EXEC_SUFFIX)
 
 blackjack-tcp-$(EXEC_SUFFIX): blackjack-tcp.cpp
-	$(CC) $(CFLAGS) $(OSINC) $(OSLIB) $(OSDEF)  -o $@ blackjack-tcp.cpp server.cpp Client.cpp
+	$(CC) $(CFLAGS) $(OSINC) $(OSLIB) $(OSDEF)  -o $@ blackjack-tcp.cpp server.cpp Client.cpp Deck.cpp
 
 clean:
 	-rm -rf blackjack-tcp-* blackjack-tcp-*.dSYM
